--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Open Sans', sans-serif !important;
+  flex-shrink: 0;
 }
 
 body {
@@ -12,4 +13,96 @@ header h1 {
   font-weight: bold;
 
   padding: 3.5rem 0;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+
+  padding: 0 1.79rem;
+}
+
+main nav {
+  width: 16.71%;
+  background-color: #D9D9D9;
+}
+
+main nav p {
+  padding: 1rem 0;
+  padding-left: 1rem;
+
+  border-bottom: 1px solid black;
+}
+
+main section {
+  width: 61.87%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+main section .row {
+  max-height: 300px;
+
+  display: flex;
+
+  margin-bottom: 0.79rem;
+}
+
+main section .row:last-child {
+  margin-bottom: 0;
+}
+
+main section .row .img-wrapper {
+  height: 100%;
+  display: flex;
+
+  margin-right: 0.79rem;
+}
+
+main section img {
+  height: 100%;
+}
+
+main aside {
+  background-color: #D9D9D9;
+  align-self: flex-start;
+
+  padding-left: 1.29rem;
+}
+
+main aside h2 {
+  font-size: 1.29rem;
+  text-transform: uppercase;
+  color: #C74E5C;
+
+  margin-top: 0.5rem;
+}
+
+main aside label[for="order"] {
+  margin-left: 3rem;
+}
+
+main aside input[name="order"] {
+  margin-right: 0.75rem;
+}
+
+main aside ul {
+  margin-bottom: 1rem;
+
+  display: flex;
+  flex-direction: column;
+}
+
+main aside li {
+  margin-top: 1.67rem;
+}
+
+main aside li span {
+  font-weight: bold;
+}
+
+main aside .rate-bar {
+  margin-top: 1rem;
 }
