--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,10 @@ header h1 {
 main {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
 
   padding: 0 1.79rem;
+
+  position: relative;
 }
 
 main nav {
@@ -40,6 +41,8 @@ main section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+
+  margin-left: 1.5rem;
 }
 
 main section .row {
@@ -59,6 +62,26 @@ main section .row .img-wrapper {
   display: flex;
 
   margin-right: 0.79rem;
+
+  position: relative;
+}
+
+main section .row .img-wrapper .cat-name {
+  position: absolute;
+  left: 0;
+  bottom: 3rem;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 1rem 0.75rem;
+  width: 180px;
+
+  font-size: 1.5rem;
+
+  display: none;
+}
+
+main section .row .img-wrapper:hover .cat-name {
+  display: block;
 }
 
 main section img {
@@ -70,6 +93,7 @@ main aside {
   align-self: flex-start;
 
   padding-left: 1.29rem;
+  margin-left: 0.21rem;
 }
 
 main aside h2 {
@@ -105,4 +129,37 @@ main aside li span {
 
 main aside .rate-bar {
   margin-top: 1rem;
+}
+
+main aside ul .rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+main aside ul span {
+  margin-right: 1rem;
+  text-align: center;
+}
+
+footer {
+  border-top: 1px solid black !important;
+  height: 3rem;
+  margin-top: 1rem !important;
+}
+
+footer p {
+  padding: 1rem;
+  font-size: 0.75rem;
+}
+
+footer p:first-child {
+  float: left;
+  padding-left: 3rem;
+}
+
+footer p:last-child {
+  float: right;
+  padding-right: 1rem;
+  color: #004cc6;
 }
